chore: update http headers
